# precision-health-agents

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.streamlit/: config.toml
app/: dashboard.py
data/diabetes/: README.md
data/exercises/: README.md
data/medications/: README.md
data/transcriptomics/: README.md
docs/: architecture.md  data.md  demo.md  design.md  doctor_agent.md  eval.md  genomics.md  health_trainer.md  hospital.md  metabolomics.md  pharmacology.md  plan.md  tasks-js.md  tasks-yh.md  tasks.md  transcriptomics.md  vision.md
mb_js/: progress.md
mb_js/completed/: main.md
mb_yh/: progress.md
scripts/: demo_conversation.py  evaluate.py  evaluate_health_trainer.py  process_transcriptomics.py  run.py  train_diabetes_model.py
src/bioai/: config.py  models.py  orchestrator.py
src/bioai/agents/: __init__.py  (+10 more)
src/precision_health_agents/: __init__.py  config.py  models.py  orchestrator.py
tests/: test_agents.py  test_config.py  test_diabetes_classifier.py  test_dna_classifier.py  test_doctor_agent.py  test_drug_recommender.py  test_eval_cases.py  test_eval_judge.py  test_eval_metrics.py  test_eval_ralph.py  test_exercise_recommender.py  test_gene_expression_analyzer.py  test_genomics_agent.py  test_health_trainer_agent.py  test_hospital_agent.py  test_integration_full_pipeline.py  test_integration_genomics_doctor.py  test_integration_pipeline.py  test_metabolic_profile_analyzer.py  test_metabolomics_agent.py  test_pharmacology_agent.py  test_proteomics_agent.py  test_transcriptomics_agent.py  test_workout_type_classifier.py
(+52 files in other folders)
