[project]
name = "precision-health-agents"
version = "0.1.0"
description = "Multi-Agent Healthcare Intelligence System for Personalized and Preventive Medicine"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "myvariant",
    "biopython",
    "gseapy",
    "dgipy",
    "semanticscholar",
    "pydantic>=2.0",
    "pandas",
    "pyarrow",
    "streamlit",
    "plotly",
    "requests",
    "httpx",
    "tensorflow",
    "numpy",
    "scikit-learn",
    "imbalanced-learn",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/precision_health_agents"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
